--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "version": "1.4.0",
-  "author": "Pebble Technology",
+  "author": "Manu Cornet",
   "private": true,
   "dependencies": {},
   "keywords": [
@@ -17,7 +17,7 @@
       "dummy": 0
     },
     "enableMultiJS": false,
-    "displayName": "KS Original",
+    "displayName": "Manu's watch",
     "watchapp": {
       "onlyShownOnCommunication": false,
       "hiddenApp": false,
@@ -32,5 +32,5 @@
     ],
     "capabilities": []
   },
-  "name": "KS Original"
+  "name": "Manu's watch"
 }
